--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.TestProj1" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.testproj1" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.TestProj1" parent="Base.Theme.TestProj1" />
+    <style name="Theme.testproj1" parent="Base.Theme.testproj1" />
 </resources>
